reports alignment fix

--- a/src/app/modules/report/comparison-report/comparison-report.component.scss
+++ b/src/app/modules/report/comparison-report/comparison-report.component.scss
@@ -57,3 +57,6 @@ nz-select {
   background: rgba(255, 165, 0, 0.71)
 }
 
+.no-text-Area {
+  display: none;
+}
