--- a/src/styles.scss
+++ b/src/styles.scss
@@ -221,7 +221,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    left: 250px;
+    right: 25%;
     top: 0;
 
     .box-shadow {
@@ -229,7 +229,14 @@ button {
     }
   }
 
+  .text-Area {
+    display: none;
+  }
 
+  .no-text-Area {
+    display: block !important;
+    width: 100%;
+  }
 
   #sectionProspect * {
     visibility: visible;
@@ -240,7 +247,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    right: 30%;
+    right: 32%;
     top: 0;
 
     .box-shadow {
